Version 0.6.2

* Apply patch #1602535 from goedson - Fix writer device selection
* Apply patch #1602235 from goedson - use an array for the status icon collection
* Apply patch #1608179 from goedson -  Fixes folder creation in data project

Version 0.6.1


* Apply patch #1576272 from Marc Deslauriers - Patch to fix bug #1522258 (also fixes #1560138 - unable to createa cdr or cdrw)



Version 0.6.0

* Fix RFE #1242645 Clearer indication of successful burn completion (actually in 0.5.1)
* Fix RFE #1165304 smarten up device selection. Only show writers in the writers option menu.
* Fix Bug #1418811 Copying with single drive fails
* Apply patch #1430548 from domg - Fix compilation on FreeBSD 
* Apply patch from gamehack to enable libnotify support ( ./configure --enable-libnotify ) 
* Apply patch from Ignacio Martin:
		- Data disk contents can be edited and folders added etc.
		- You can now add files which exceed the disk size and choose which to remove.
		Fixes RFE #1286697 Files And Directories editing ....		
		Fixes RFE #1210821 Browsible CD
		Fixes RFE #1211475 Virtual Folders
* Fix Bug #1442519 Can't compile gnomebaker with Fedora Core 5 libnotify 0.3.0
* Fix Bug #1439059 Can't compile gnomebaker with gstreamer 0.10
* Fix Bug #1429235 gnomebaker-1.9.0: compilation issue
* Move the show hidden files and show human readable file size options to the main window menu.
* Tidy up the menus when we are not showing the file browser
* Add overburning support for cds. Currently allows 2% overburning until I determine a more scientific approach.
* Apply Ignacio's cairo progress bar patch.
* Apply patch from Joseph E. Sacco to support libnotify-0.4
* Default all open and save file choosers to user's home dir
* When not showing file browser, add button now allows selection of files or folders.
* Notionally split out data CD and DVD so they are both available in the File->New menu.
* Tidy up the start burning dlg and make the layouts look better.