@@ -3,6 +3,7 @@ Version 0.6.2
 * Apply patch #1602535 from goedson - Fix writer device selection
 * Apply patch #1602235 from goedson - use an array for the status icon collection
 * Apply patch #1608179 from goedson -  Fixes folder creation in data project
+* Use libburn for blanking cds
 
 Version 0.6.1
 
